Fixes title alignment on partner page

--- a/src/pages/partner/PartnerPage.css
+++ b/src/pages/partner/PartnerPage.css
@@ -40,7 +40,7 @@
   width: 48%;
 }
 .partner-page-navigation div {
-  margin: 0 43px;
+  margin: 0 42px;
   border-bottom: 6px solid transparent;
   border-radius: 3px;
   height: 40px;
@@ -101,7 +101,7 @@
   display: flex;
 }
 .partner-page-title {
-  margin-left: 50px;
+  margin-left: 42px;
   margin-top: 60px;
 }
 .partner-page-title > p {
